--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,5 +1,8 @@
 ﻿@using Animal_Hotel.Models.DatabaseModels;
 @using Animal_Hotel.Models.ViewModels;
+@using Animal_Hotel.Models.ViewModels.RoleViewModels;
+@using Animal_Hotel.Models.ViewModels.RegisterViewModels;
 @using Animal_Hotel.Services;
+@using System.Security.Claims;
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
