--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
-﻿@using Animal_Hotel.Models.DatabaseModels;
+﻿@using Animal_Hotel;
+@using Animal_Hotel.Models.DatabaseModels;
 @using Animal_Hotel.Models.ViewModels;
 @using Animal_Hotel.Models.ViewModels.RoleViewModels;
 @using Animal_Hotel.Models.ViewModels.RegisterViewModels;
