--- a/wwwroot/css/register.css
+++ b/wwwroot/css/register.css
@@ -24,56 +24,82 @@
 }
 
 .form-inputs-container {
+  height: calc(var(--index) * 29);
   display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  grid-template-rows: repeat(7, 1fr) 2fr repeat(7, 1fr);
+  grid-template-columns: 3fr 1fr 3fr;
+  row-gap: 5%;
+  grid-template-rows: 3fr 1fr 3fr;
 }
 
-.form__input-txt {
-  background-color: var(--color-light);
-  font-weight: 300;
-  font-size: 1.2rem;
-  border: none;
-  border-bottom: 2px solid black;
+/* register form grid layout */
+.lu1 {
+  grid-row: 1;
+  grid-column: 1;
 }
 
-.form__input-txt:focus {
-  border: none;
-  outline: none;
-  border-bottom: 3px solid;
-  border-image-slice: 1;
-  border-image-source: var(--gradient-primary);
+.ru1 {
+  grid-row: 1;
+  grid-column: 3;
 }
 
-.form__input-date {
+.ld1 {
+  grid-row: 3;
+  grid-column: 1;
 }
 
-.form__input-file {
-  display: none;
+.rd1 {
+  grid-row: 3;
+  grid-column: 3;
 }
 
-.for_input-file {
+.form__row {
   display: grid;
-  place-items: center;
-  grid-row: 8;
-  grid-column: 1/8;
-  background-color: white;
-  cursor: pointer;
-  border: 1px solid gray;
-  text-align: center;
-  color: rgba(71, 70, 70, 0.77);
-  font-size: 1rem;
-  transition: background-color 0.5s, color 0.5s;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
 }
 
-.for_input-file:hover {
-  background-color: rgba(142, 139, 139, 0.877);
-  color: black;
+.form__column {
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+  row-gap: 2%;
 }
 
-.small__text-blue {
-  color: blue;
-  font-size: 1.2rem;
+.form__input-file_placeholder {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  /* grid-template-rows: repeat(2, 1fr); */
+  grid-column: 1/4;
+  grid-row: 2;
+}
+
+.form__input-file-lbl {
+  grid-row: 1;
+  grid-column: 1;
+}
+
+.form__input-file-validator {
+  grid-row: 1;
+  grid-column: 2/7;
+}
+
+.form__input-file-input {
+  grid-column: 1/7;
+  grid-row: 2/4;
+}
+
+.form__lbl_position {
+  grid-row: 3;
+  grid-column: 1;
+}
+
+.form__input_position {
+  grid-row: 2;
+  grid-column: 1/4;
+}
+
+.form__validator_position {
+  grid-column: 2/4;
+  grid-row: 3;
 }
 
 .btn-register {
@@ -100,140 +126,4 @@
 
 .footer__logo {
   max-width: calc(var(--index) * 7);
-}
-
-/* form grid layout */
-#login-lbl {
-  grid-row: 2;
-  grid-column: 1;
-}
-
-#login-input {
-  grid-row: 1;
-  grid-column: 1/4;
-}
-
-#login-validator {
-  grid-row: 2;
-  grid-column: 2/4;
-}
-
-#phone-lbl {
-  grid-row: 2;
-  grid-column: 5;
-}
-
-#phone-input {
-  grid-row: 1;
-  grid-column: 5/8;
-}
-
-#phone-validator {
-  grid-row: 2;
-  grid-column: 6/8;
-}
-
-#password-lbl {
-  grid-row: 5;
-  grid-column: 1;
-}
-
-#password-input {
-  grid-row: 4;
-  grid-column: 1/4;
-}
-
-#password-validator {
-  grid-row: 5;
-  grid-column: 2/4;
-}
-
-#password__repeat-lbl {
-  grid-row: 5;
-  grid-column: 5;
-}
-
-#password__repeat-input {
-  grid-row: 4;
-  grid-column: 5/8;
-}
-
-#password__repeat-validator {
-  grid-row: 5;
-  grid-column: 6/8;
-}
-
-#photo-lbl {
-  grid-row: 7;
-  grid-column: 1/3;
-}
-
-#photo-input {
-  grid-row: 8;
-  grid-column: 1/8;
-}
-
-#photo-validator {
-  grid-row: 7;
-  grid-column: 4/8;
-}
-
-#firstname-lbl {
-  grid-row: 11;
-  grid-column: 1;
-}
-
-#firstname-input {
-  grid-row: 10;
-  grid-column: 1/4;
-}
-
-#firstname-validator {
-  grid-row: 11;
-  grid-column: 2/4;
-}
-
-#lastname-lbl {
-  grid-row: 11;
-  grid-column: 5;
-}
-
-#lastname-input {
-  grid-row: 10;
-  grid-column: 5/8;
-}
-
-#lastname-validator {
-  grid-row: 11;
-  grid-column: 6/8;
-}
-
-#card-lbl {
-  grid-row: 14;
-  grid-column: 5;
-}
-
-#card-input {
-  grid-row: 13;
-  grid-column: 5/8;
-}
-
-#card-validator {
-  grid-row: 14;
-  grid-column: 6/8;
-}
-
-#birth__date-lbl {
-  grid-row: 14;
-  grid-column: 1;
-}
-
-#birth__date-input {
-  grid-row: 13;
-  grid-column: 1/4;
-}
-
-#birth__date-validator {
-  grid-row: 14;
-  grid-column: 2/4;
 }
