--- a/Views/Shared/_MainLayout.cshtml
+++ b/Views/Shared/_MainLayout.cshtml
@@ -2,7 +2,7 @@
 @inject ClaimHelper claimHelper
 
 @functions {
-    string GetClassByModelState(HomePageViewModel state) => state.IsTriedToLogin ? "" : "hidden";
+    string GetClassByModelState(HomePageViewModel state) => state.IsInteractedWithModal ? "" : "hidden";
 }
 
 <!DOCTYPE html>
@@ -45,7 +45,7 @@
                 @if(User.Identity?.IsAuthenticated ?? false)
                 {
                     <a asp-action="UserProfile" asp-controller="UserProfile" 
-                    asp-route-userId="@(claimHelper.GetClaimValue(ClaimTypes.Sid))">
+                    asp-route-userId="@(claimHelper.GetClaimValue(ClaimTypes.PrimarySid))">
                         <img class="profile-img" src="~/img/image_placeholder.png">
                     </a>
                 }
