--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -230,6 +230,20 @@ body {
   opacity: 0.8;
 }
 
+.skew-highlight {
+  display: block;
+  background-image: var(--gradient-primary);
+  transform: scale(1.05, 1.07) skewX(342deg);
+  width: fit-content;
+}
+
+.gradient-background {
+  background: linear-gradient(45deg, #ff0000, #0000ff);
+  display: inline-block;
+  transform: skew(-20deg);
+  padding: 5px;
+}
+
 .modal {
   position: fixed;
   top: 50%;
@@ -247,6 +261,7 @@ body {
 .hidden {
   pointer-events: none;
   visibility: hidden;
+  display: none;
   opacity: 0;
 }
 
@@ -331,4 +346,38 @@ body {
 #modal__register-link:hover {
   color: var(--color-secondary);
   opacity: 1;
+}
+
+.action_icon {
+  height: calc(var(--index));
+  width: calc(var(--index));
+}
+
+.action_btn {
+  text-decoration: none;
+  color: #272727;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 1%;
+  border: 1px solid black;
+  transition: all 0.5s;
+  cursor: pointer;
+}
+
+.action_btn:hover {
+  background-color: rgb(82, 81, 81);
+  color: var(--color-light);
+}
+
+.action__show {
+  background: var(--color-secondary);
+}
+
+.action__edit {
+  background-color: rgb(216, 191, 216);
+}
+
+.action__delete {
+  background-color: rgba(230, 168, 160);
 }
